--- a/enabler/AndroidManifest.xml
+++ b/enabler/AndroidManifest.xml
@@ -36,6 +36,7 @@
   </application>
 
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
   <uses-permission android:name="android.permission.INTERNET" />
