--- a/openxc/AndroidManifest.xml
+++ b/openxc/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="com.openxc" android:versionCode="1" android:versionName="1.0">
   <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <service android:name="com.openxc.VehicleManager"/>
   <service android:name="com.openxc.remote.VehicleService" android:process=":remote">
       <intent-filter>
