Drop minimum Android SDK requirement 10 as phones can use bluetooth.
The target is still 12, so we can use the ActionBar.

--- a/enabler/AndroidManifest.xml
+++ b/enabler/AndroidManifest.xml
@@ -45,6 +45,7 @@
   <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
   <uses-feature android:name="android.hardware.usb.host"
           android:required="true" />
-  <uses-sdk android:minSdkVersion="12" />
+  <uses-sdk android:minSdkVersion="10" />
+  <uses-sdk android:targetSdkVersion="12" />
 </manifest>
 
