--- a/examples/AndroidManifest.xml
+++ b/examples/AndroidManifest.xml
@@ -17,4 +17,7 @@
 
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
+
+  <uses-sdk android:minSdkVersion="10" />
+  <uses-sdk android:targetSdkVersion="12" />
 </manifest>
